--- a/ansible/psql_cluster/templates/pg_hba_conf.j2
+++ b/ansible/psql_cluster/templates/pg_hba_conf.j2
@@ -103,3 +103,5 @@ local   replication     all                                     peer
 host    replication     all             127.0.0.1/32            scram-sha-256
 host    replication     all             ::1/128                 scram-sha-256
 host    replication     syncuser        192.168.10.32/32        scram-sha-256
+host    my_wiki         wikiuser        192.168.10.40/32        scram-sha-256
+host    my_wiki         wikiuser        192.168.10.29/32        scram-sha-256
